Fix scrollbar #151

--- a/user-manager/src/components/TextArea/TextArea.css
+++ b/user-manager/src/components/TextArea/TextArea.css
@@ -3,7 +3,7 @@
   font-size: var(--font-sm);
   font-weight: var(--fw-regular);
   color: var(--secondary-color);
-  width: 416px;
+  width: 300px;
   height: 120px;
   padding: 5px 12px;
   border: 1px solid var(--border-color);
